Include clien_secret.json encrypted by Travis CI
Signed-off-by: Karel Ha <mathemage@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
 python:
-  - "3.5"
-  - "3.5-dev" # 3.5 development branch
-  - "3.6"
-  - "3.6-dev" # 3.6 development branch
-  - "3.7-dev" # 3.7 development branch
-  - "nightly" # currently points to 3.7-dev
+- '3.5'
+- 3.5-dev
+- '3.6'
+- 3.6-dev
+- 3.7-dev
+- nightly
+before_install:
+- openssl aes-256-cbc -K $encrypted_a85c126d38b1_key -iv $encrypted_a85c126d38b1_iv
+  -in client_secret.json.enc -out client_secret.json -d
 script:
 - python3 gSheetsIterator.py
